# FIM

./: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  VERSION  config.h.in  configure  configure.ac
distros/: Makefile.am  Makefile.in
doc/: FIM.TXT  FIM.html  Makefile.am  Makefile.in  fim.man  fim.man.html  fim.man.in  fimgs.man  fimgs.man.html  fimgs.man.in  fimrc.man  fimrc.man.html  fimrc.man.in  vim2html.pl
media/multipage/: Makefile  sample.tex
scripts/: Makefile.am  Makefile.in
scripts/example/: oneline.fim
scripts/maintenance/: configure-live.sh  configure-minimal.sh  configure-only-fb-mini.sh
scripts/tests/: font.sh  version.sh
src/: AADevice.cpp  AADevice.h  Arg.cpp  Arg.h  Benchmarkable.h  Browser.cpp  Browser.h  CACADevice.cpp  CACADevice.h  Cache.cpp  Cache.h  Command.cpp  Command.h  CommandConsole-cmd.cpp  CommandConsole-help.cpp  CommandConsole-init.cpp  CommandConsole-var.cpp  CommandConsole.cpp  CommandConsole.h  DebugConsole.cpp  DebugConsole.h  DisplayDevice.cpp  DisplayDevice.h  DummyDisplayDevice.h  FbiStuff.cpp  FbiStuff.h  FbiStuffBit1.cpp  FbiStuffBit24.cpp  FbiStuffBmp.cpp  FbiStuffDjvu.cpp  FbiStuffFbtools.cpp  FbiStuffGif.cpp  FbiStuffJasPer.cpp  FbiStuffJpeg.cpp  FbiStuffList.h  FbiStuffLoader.cpp  FbiStuffLoader.h  FbiStuffMagick.cpp  FbiStuffMatrixMarket.cpp  FbiStuffPcx.cpp  (+47 more)
src/testdir/: Makefile  test13.in  test14.ok  test17.in  test17.ok  test19.in  test19.ok  test20.in  test20.ok  test22.ok  test5.in  test5.ok
